--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,9 @@
 /*Général*/
 
 body {
-    background: url("../src/img/background.png") center center no-repeat;
+    background: url("../src/img/background.png") center center  no-repeat;
     background-size: cover;
     position: relative;
-    min-height: 2000px;
     padding-top: 70px;
 }
 
@@ -16,13 +15,23 @@ body {
 
 .navbar_nav {
     border: none;
-    background-color: transparent;
     -webkit-border-radius:0;
     -moz-border-radius:0;
     border-radius:0;
+    background-color: transparent;
 }
 .navbar_color {
     background-color: #18252e;
+}
+@media (max-width: 768px) {
+    .navbar_collapse {
+        background-color: #18252e;
+    }
+}
+.navbar_dropdown {
+    background-color: #18252e;
+    border: none;
+    border-radius: 0;
 }
 .navbar_logo {
 }
@@ -70,35 +79,14 @@ body {
     margin-top: 5%;
     margin-bottom: 5%;
 }
-
-.welcome_navButton {
-    height: 200px;
-    margin-bottom: 1%;
-    background-color: #18252e;
-    opacity: 0.8;
-    border: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    font-size: 25px;
-    color: white;
-}
-
-.welcome_navButtonRight {
-    left: 0.5%;
-}
-
-.welcome_navButtonLeft {
-    right: 0.5%;
-}
-.welcome_navButton:hover {
-    background-color: #18252e;
-    opacity: 1;
-    color: white;
-}
-.welcome_newsUl {
-    list-style: none;
-    color: white;
+.welcome_newsDiv {
+    color: #ed7a21;
     padding:0;
-    text-align: left;
+    background-color: white;
+    padding: none;
+}
+.welcome_newsH1 {
+}
+.welcome_newsP {
+
 }
