--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,11 +100,11 @@ p {
 /*Welcome */
 
 .welcome_div {
-    background-color: rgba(235, 226, 181, 0.75);
+    /*background-color: rgba(141, 189, 69, 0.5);*/
     padding: 5%;
 }
 .welcome_divTitle {
-    background-color: rgba(6, 115, 122, 0.75);
+    background-color: rgba(24, 37, 46, 1);
     margin-top: 0;
     padding: 1%;
 }
@@ -118,7 +118,7 @@ p {
     background-color: white;
     height: 550px;
     padding: 5%;
-    border: 5px solid rgba(235, 226, 181, 1);
+    border: 5px solid rgba(90, 195, 152, 1);
     margin-bottom: 1%;
 }
 .welcome_newsH1 {
