--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,7 +100,7 @@ p {
 /*Welcome */
 
 .welcome_div {
-    /*background-color: rgba(141, 189, 69, 0.5);*/
+    background-color: rgba(141, 189, 69, 0.5);
     padding: 5%;
 }
 .welcome_divTitle {
