--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,45 @@ body {
 
 /*Fin Navbar */
 
+
+/*Page Artiste*/
+
+.artistdescr {
+    color: rgba(0, 0, 0, 1);
+    border: 3px solid #ed7a21;
+    background-color: whitesmoke;
+    text-align: center;
+    height: 100%;
+}
+
+.artistprog {
+    color: rgba(43, 175, 151, 1);
+    border: 1px #ed7a21;
+    background-color: whitesmoke;
+    min-height: 300px;
+    font-size: 22px;
+    text-align: center;
+    margin: 15px;
+    padding-top: 40px;
+}
+.artistvid {
+    margin: 10px;
+    border: 3px solid rgba(255, 255, 255, 1);
+}
+.artistvidmob{
+    border: 3px solid rgba(255, 255, 255, 1);
+}
+.blocBas{
+    margin-top: 20px;
+}
+.logosoc{
+    text-align: center;
+}
+.logosocmob {
+    text-align: center;
+}
+/*Fin Page Artiste
+
 /*Footer*/
 
 .footer {
@@ -61,8 +100,8 @@ body {
     color: white;
 }
 .footer_img {
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
     margin: 5%;
 }
 .footer_legal {
