--- a/src/styleplanning.css
+++ b/src/styleplanning.css
@@ -1,20 +1,15 @@
 h1 {
     color: white;
 }
-.container {
-    width: 1500px;
-}
 
 .planning {
     background-color: #ed7a21;
-    height: 100px;
 }
 .salle {
     color: white;
     font-family: 'Circula';
     font-size: x-large;
     text-align: center;
-    height: 70px;
     display: table-cell;
     vertical-align: middle;
     padding:
@@ -29,26 +24,12 @@ h1 {
     height: 100px;
     border: 5px solid #2baf97;
     box-shadow: 3px 3px 0px #017553;
-}
-.textconcert {
     font-weight: bold;
     font-family: 'Circula';
     text-align: center;
     font-size: 28px;
 }
 
-.concertsalle2, .concertsalle4, .concertsalle6 {
-    color: #ed7a21;
-    font-weight: bold;
-    font-family: 'Circula';
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-    font-size: 28px;
-    background-color: white;
-    border-radius : 20px;
-    padding-left: 10px;
-    height: 100px;
-    border: 5px solid #ed7a21;
-    box-shadow: 3px 3px 0px #d95a14;
+.concertsalle {
+    width: 250px;
 }
