--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 /*Général*/
 
 body {
-    background: url("../img/background.png") center center no-repeat;
+    background: url("../img/background.png") center center no-repeat fixed;
     background-size: cover;
     position: relative;
     padding-top: 70px;
@@ -141,10 +141,36 @@ p {
 
 /* --- Partie css page programmation  --- */
 
+.headerpro {
+    height: 300px;
+    background-color: rgba(24, 37, 46, 0.75);
+    border-bottom: 10px solid rgba(237, 122, 33, 0.75);
+    position: relative;
+    top:-20px;
+
+}
+
+
 .itemx {
-    margin: 50px;
+    margin: 20px;
     border:none;
+    background-color: transparent;
+
 }
 .labelx {
-    background-color: rgba(141, 189, 69, 0.5);
+    background-color: rgba(90, 195, 152, 1);
+    margin-bottom: px;
+    width:250px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: -20px;
+    height:50px;
+    color: #ffffff;
+    border: 5px solid rgba(234, 230, 247, 1);
+}
+.layoutartiste {
+    font-size: 1.5em;
+    font-family: 'Dokyo', sans-serif;
+
 }
