--- a/src/styleplanning.css
+++ b/src/styleplanning.css
@@ -3,6 +3,7 @@ h1 {
     color: white;
     text-align :center;
     font-size: 70px;
+    background-color: #2baf97;
 
 }
 
@@ -10,22 +11,53 @@ h1 {
     background-color: #ed7a21;
 }
 h2 {
+    font-family: 'Dokyo';
+    color: white;
+    text-align :center;
+    font-size: 70px;
+    background-color: #18252e;
+}
+h3 {
     color: white;
     font-family: 'Dokyo';
     font-size: x-large;
     text-align: center;
     vertical-align: middle;
 }
-
-.concert {
+.concertsmartphone {
+    color: white;
+    font-family: 'Dokyo';
+    text-align: center;
+    font-weight: 100;
+    font-size: 30px;
+}
+.sallesmartphone {
+    color: white;
+    font-family: 'Dokyo';
+    text-align: center;
+    font-size: 48px;
+}
+.concertbleu {
     color: #2baf97;
     display: table-cell;
     vertical-align: middle;
     background-color: white;
     border-radius : 20px;
-    height: 100px;
     border: 5px solid #2baf97;
     box-shadow: 3px 3px 0px #017553;
+    font-weight: bold;
+    font-family: 'Circula';
+    text-align: center;
+    font-size: 28px;
+}
+.concertorange {
+    color: #ed7a21;
+    display: table-cell;
+    vertical-align: middle;
+    background-color: white;
+    border-radius : 20px;
+    border: 5px solid #ed7a21;
+    box-shadow: 3px 3px 0px #ed7a22;
     font-weight: bold;
     font-family: 'Circula';
     text-align: center;
