--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 /*Général*/
-@import url("styleplanning.css");
+/*@import url("styleplanning.css");*/
 body {
     background: url("../img/background.png") center center  no-repeat fixed;
     background-size: cover;
@@ -67,20 +67,16 @@ p {
 
 /*Page Artiste*/
 
-.blocPage{
-    margin-top: 90px;
-  /*  background: url("../img/graphics/output-0.resized.png") center center no-repeat fixed;*/
-    background-size: cover;
-}
+
+
 .artistdescr{
     background-color: rgba(255,255,255,0.8);
 /*    height: 300px;*/
-    margin-top: 60px;
-    margin-bottom: 0px;
     padding-left: 10px;
 }
 .artistdescr h1{
     text-decoration: underline;
+    margin-top: 0%;
 
 }
 .tagartist{
@@ -94,19 +90,13 @@ p {
 }
 
 
-.img-responsive{
-    margin-top: 60px;
-    text-align: center;
-
-}
 .artistprog{
     text-align: center;
     background-color: rgba(255,255,255,0.8);
-    max-width: 90%;
     min-height: 180px;
     color: rgba(43, 175, 151, 1);
     font-size: 25px;
-    padding-top: 10px;
+    padding: 10% 0 10% 0;
     margin-top: 54px;
     font-family: 'Dokyo', sans-serif;
 }
@@ -149,7 +139,13 @@ p {
     text-align: center;
     margin-bottom: 70px;
 }
-
+.imgartiste{
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+    display: block;
+    overflow-clip: padding-box;
+}
 
 
 
