--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,20 +285,21 @@ p {
     background-color: transparent;      /* Fond Transparent */
     /*background-color: rgba(90, 195, 152, 1);      !* Fond cyan *!*/
     /*border: 3px solid rgba(237, 122, 33, 1);        !* Bordure orange *!*/
-    /*border: 3px solid rgba(90, 195, 152, 1);        !* Bordure cyan *!*/
-    /*border: 3px solid rgba(90, 195, 152, 1);        !* Bordure cyan *!*/
-    border-right: 3px solid rgba(90, 195, 152, 1);        /* Bordure blanche */
-    border-left: 3px solid rgba(90, 195, 152, 1);
+    border: 3px solid rgba(90, 195, 152, 1);        /* Bordure cyan */
+    /*border-right: 3px solid rgba(90, 195, 152, 1);        !* Bordure cyan droite*!*/
+    /*border-left: 3px solid rgba(90, 195, 152, 1);       !* Bordure cyan gauche*!*/
     position: relative;
     top:5px;
     left:-15px;
     border-radius: inherit;
+    clear: both;
 
 }
 
 .listtri {
     background-color: rgba(90, 195, 152, 0.85);     /* Fond cyan */
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
+    color: rgba(237, 122, 33, 1);
 }
 
 
@@ -308,24 +309,6 @@ p {
     border: none;
     background-color: transparent;
 
-}
-
-/*Fin Food*/
-
-/*Venir*/
-
-.venir_div {
-    background-color: white;
-    padding: 1%;
-    border: 5px solid rgba(90, 195, 152, 1);
-    margin-bottom: 1%;
-}
-
-.venir_hr {
-    border: 1px solid rgba(90, 195, 152, 1);
-    width: 80%;
-}
-/*Fin Venir*/
 
 /* -- style image seule -- */
 
@@ -430,4 +413,19 @@ p {
 }
 
 /*Fin Food*/
+
+/*Venir*/
+
+.venir_div {
+    background-color: white;
+    padding: 1%;
+    border: 5px solid rgba(90, 195, 152, 1);
+    margin-bottom: 1%;
+}
+
+.venir_hr {
+    border: 1px solid rgba(90, 195, 152, 1);
+    width: 80%;
+}
+/*Fin Venir*/
 
