--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,14 +133,12 @@ body {
 }
 .footer-bottom {
     background-color: rgba(90, 195, 152, 1);
+    padding: 1%;
 }
 .footer-legal {
     color: white;
-    margin-bottom: 1%;
 }
 .footer-sponsor {
-    height: 50px;
-    max-width: 150px;
     margin: 5%;
 }
 .footer-social {
