--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,16 +72,29 @@ p {
 /**************Page Artiste**************/
 
 
-
+.page_title{
+    text-align: center;
+    color: white;
+    font-family: 'Dokyo', sans-serif;
+    font-size: 75px;
+    margin-top: 5%;
+    margin-bottom: 8%;
+}
 .artistdescr{
-    background-color: rgba(255,255,255,0.8);
+ /*   background-color: hsl(180, 50%, 50%);*/
+   background-color: rgba(255,255,255,1);
 /*    height: 300px;*/
-    padding-left: 10px;
+    padding: 2%;
+    border: 3px solid rgba(141, 189, 69, 1);
+
 }
 .artistdescr h1{
-    text-decoration: underline;
+  /*  text-decoration: underline;*/
     margin-top: 0%;
-
+    font-weight: 100;
+}
+.artistdescr p{
+    padding-top: 5%;
 }
 .tagartist{
     margin-top: 70px;
@@ -92,40 +105,53 @@ p {
     width: 20px;
     margin: 3%;
 }
-
+.imgartiste{
+    width: 80%;
+    height: 100%;
+    display: block;
+}
 
 .artistprog{
     text-align: center;
-    background-color: rgba(255,255,255,0.8);
-    min-height: 180px;
-    color: rgba(43, 175, 151, 1);
-    font-size: 25px;
-    padding: 10% 0 10% 0;
-    margin-top: 54px;
+/*    background-color: rgba(255,255,255,0.8);*/
+    height: 100%;
+/*    color: rgba(43, 175, 151, 1);*/
+    color: white;
+    font-size: 30px;
+    padding: 5% 20% 0 0;
+    margin-top: 14px;
     font-family: 'Dokyo', sans-serif;
 }
 .separateur {
     border: thin solid grey;
     width: 65%;
+    margin-top: 7%;
 }
 .trait{
     border-top: 1px solid grey;
     display: block;
     height: 1px;
-    width: 50px;
+    width: 30%;
     margin: 20px auto;
 }
 .progmob p{
     font-family: 'Dokyo', sans-serif;
-    color: rgba(43, 175, 151, 1);
-    font-size: 20px;
+ /*   color: rgba(43, 175, 151, 1);*/
+    color: white;
+    font-size: 30px;
+}
+.artistdescrmob{
+    background-color: rgba(255,255,255,0.8);
+    /*    height: 300px;*/
+    padding: 2%;
+    border: 3px solid rgba(141, 189, 69, 1);
+    border-top: none;
 }
 
 .artistvid{
     margin: 50px 0px 350px;
     padding: 5px 5px 0px 5px;
     text-align: center;
-    position: relative;
 }
 /*.artistprogmob{
     text-align: center;
@@ -143,17 +169,17 @@ p {
     text-align: center;
     margin-bottom: 70px;
 }
-
-
-
-
-.imgartiste{
+.img_mob{
     width: 100%;
-    overflow: hidden;
-    height: 100%;
-    display: block;
-    overflow-clip: padding-box;
+    border: 3px solid rgba(141, 189, 69, 1);
+
+    border-bottom: none;
+
 }
+
+
+
+
 
 /*************Fin Page Artiste****************/
 
